GNOME Bugzilla – Bug 739495
addressbook: Fix a typo in a comparison
Last modified: 2014-11-08 22:53:21 UTC
Not entirely sure if this is the correct fix, since I don’t know the intention of the code, but it seems reasonable to me.
*** Bug 739496 has been marked as a duplicate of this bug. ***
Created attachment 289785 [details] [review] addressbook: Fix a typo in a comparison
Review of attachment 289785 [details] [review]: Looks good, please commit. Just make the commit's log summary look like: Bug 739495 - addressbook: Fix a typo in a comparison
Pushed with the summary change.