Bug 739495 - addressbook: Fix a typo in a comparison

E_BOOK_QUERY_BEGINS_WITH was checked against twice, which seems wrong.
Presumably, the second was meant to be E_BOOK_QUERY_ENDS_WITH, but I’m
not entirely sure.

Coverity issue: #1250456

https://bugzilla.gnome.org/show_bug.cgi?id=739495